--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AquaTech</title>
 
-
+    <link rel="shortcut icon" href="/imagens/favicon2.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,7 +27,37 @@
         </div>
     </div>
 
+    <div class="banner">
+        <div class="container">
+        <span class="banner-title">Preservando <b>hoje</b> para existirem <b>amanhã.</b></span>
+    </div>
+    </div>
 
+        <!-- .card*3>h2 -->
+    <div class="cards">
+        <div class="card">
+            <img src="imagens/planet-earth_color.png" alt="">
+            <h2>Missão</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="card">
+            <img src="imagens/lightbulb_color.png" alt="">
+            <h2>Visão</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="card">
+            <img src="imagens/growth_color.png" alt="">
+            <h2>Valores</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p>Feito com amor por um aluno SPTECH © <!-- &copy --> <br>2024</p>
+    </div>
 </body>
 
 </html>
+
